pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: Aman-img
    image: 3aman/img16:v1.0.0
    ports:
      - containerPort: 3000
