deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: myntra-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: myntra

  template:
    metadata:
      labels:
        app: myntra

    spec:
      containers:
      - name: myntra-container
        image: 3aman/myntra-front:v1

        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: myntra-service

spec:
  selector:
    app: myntra

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30007

  type: NodePort
