replicaset.yaml
apiVersion: v1
kind: Service

metadata:
  name: aman-service

spec:
  selector:
    app: nginx

  ports:
    - protocol: TCP
      port: 88
      targetPort: 80

  type: ClusterIP
