gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Gateway
metadata:
  name: aman-gateway 
  namespace: aman-ns 
spec:
  gatewayClassName: kgateway 
  listeners: 
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes: 
        namespaces: 
          from: same
