http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aman-route
  namespace: aman-ns 

spec:
  parentRefs:
    - name: aman-gateway 
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/nginx
      filters:
        - type: URLRewrite 
          URLRewrite: 
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /nginx
      backendRefs:
        - name: aman-service
          port: 80
