ingress.yaml
apiVersion:  networking.k8s.io/v1 
kind: Ingress
metadata:
  name: aman-ingress 
  annotations:
    ngnix.ingress.kubernetes.io/force-ssl-redirect: "false"
    ngnix.ingress.kubernetes.io/rewrite-target: /$2
    ngnix.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - http:
      paths:
      - path: /ngnix(/|$))(.*)
        pathtype: Prefix
        backend:
          service:
            name: aman-service
            port:
              number: 88
